--- a/CSSKern/index.html
+++ b/CSSKern/index.html
@@ -9,7 +9,7 @@
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
   
   <link rel="stylesheet" type="text/css" href="style.css">
-  // the line above tells the program to read info from the style.css file when running the code, otherwise the file will get ignored
+  <!-- the line above tells the program to read info from the style.css file when running the code, otherwise the file will get ignored -->
 
 </head>
 
